--- a/Trabalho1/makefile
+++ b/Trabalho1/makefile
@@ -1,6 +1,14 @@
-.PHONY: default build 
+.PHONY: default build clean
 
 default: build
 
 build:	
-	g++ -O2 mm.cpp -o matrix -lpapi
+	g++ -O2 matrixproduct.cpp -o matrix -lpapi
+	javac matrixproduct.java
+
+setup:
+	sudo sh -c 'echo -1 >/proc/sys/kernel/perf_event_paranoid'
+	
+clean:
+	rm -rf matrix
+	rm -rf MatrixProd.class
