--- a/Trabalho1/makefile
+++ b/Trabalho1/makefile
@@ -4,7 +4,7 @@ default: build
 
 build:	
 	g++ -O2 matrixproduct.cpp -o matrix -lpapi
-	javac matrixproduct.java
+	javac MatrixProduct.java
 
 setup:
 	sudo sh -c 'echo -1 >/proc/sys/kernel/perf_event_paranoid'
